<resources>
    <!-- METADATA -->
    <string name="app_name">Prodexa</string>

    <!-- UI -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>

    <!-- NAVIGATION -->
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>

    <!-- SETTINGS -->
    <string name="settings_configurations">Configurations</string>
    <string name="settings_configurations_general">General</string>
    <string name="settings_configurations_appearance">Appearance</string>
    <string name="settings_configurations_storage">Storage</string>
    <string name="settings_configurations_notifications">Notifications</string>

    <string name="settings_support">Support</string>
    <string name="settings_support_watchAds">Watch Ads</string>
    <string name="settings_support_listenToMusic">Listen to Music</string>
    <string name="settings_support_otherLinks">Other Links</string>

    <string name="settings_info">Information</string>
    <string name="settings_info_privacyPolicy">Privacy Policy</string>
    <string name="settings_info_about">About</string>

    <!-- SETTINGS CONFIGURATIONS -->
    <string name="settings_configurations_general_username_title">Username</string>
    <string name="settings_configurations_general_username_hint">Matoko N.</string>

    <string name="settings_configurations_general_dashboard_feature_list_title">Dashboard Features</string>

    <string name="settings_configurations_general_dashboard_sort_title">Dashboard Sort</string>
    <string name="settings_configurations_general_dashboard_sort_default">Default</string>
    <string name="settings_configurations_general_dashboard_sort_name_ascending">Name (A-Z)</string>
    <string name="settings_configurations_general_dashboard_sort_name_descending">Name (Z-A)</string>

    <string name="settings_configurations_storage_dashboard">Dashboard Storage</string>

    <!-- SETTINGS INFORMATION -->

    <!-- DASHBOARD -->
    <string name="dashboard_tasks">Tasks</string>
    <string name="dashboard_diary">Diary</string>
    <string name="dashboard_calendar">Calendar</string>
    <string name="dashboard_habits">Habits</string>
    <string name="dashboard_wallet">Wallet</string>
    <string name="dashboard_notes">Notes</string>
    <string name="dashboard_countdown">Countdown</string>
    <string name="dashboard_grocery">Grocery List</string>

    <!-- ERRORS & WARNINGS -->
    <string name="settings_configurations_general_username_error_empty">Username cannot be empty</string>">
    <string name="settings_configurations_general_username_error_too_short">Really? 1 character for the Username?</string>
    <string name="settings_configurations_general_username_error_too_long">Username must be at most 40 characters long</string>
    <string name="settings_configurations_general_username_error_invalid_chars">Username can only contain letters, numbers, underscores, periods, and hyphens</string>

    <string name="settings_configurations_storage_dashboard_error_file_not_found">File not found</string>


</resources>