<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_nav_height"
    android:layout_marginStart="@dimen/bottom_nav_margin_horizontal"
    android:layout_marginEnd="@dimen/bottom_nav_margin_horizontal"
    android:layout_marginBottom="@dimen/bottom_nav_margin_bottom"
    android:background="@drawable/bg_bottom_nav_island"
    android:elevation="@dimen/bottom_nav_elevation"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:paddingStart="@dimen/bottom_nav_inner_padding"
    android:paddingEnd="@dimen/bottom_nav_inner_padding">

    <!-- Home -->
    <ImageView
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/home"
        android:padding="12dp"
        android:src="@drawable/ic_house_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_dashboard"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/black" />

    <!-- Dashboard -->
    <ImageView
        android:id="@+id/nav_dashboard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_dashboard_empty"
        android:contentDescription="@string/dashboard"
        app:layout_constraintStart_toEndOf="@id/nav_home"
        app:layout_constraintEnd_toStartOf="@id/nav_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:padding="12dp"
        app:tint="@color/black" />

    <!-- Settings -->
    <ImageView
        android:id="@+id/nav_settings"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_settings_empty"
        android:contentDescription="@string/settings"
        app:layout_constraintStart_toEndOf="@id/nav_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:padding="12dp"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>
