<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="always">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin">

        <LinearLayout
            android:id="@+id/username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/username_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_configurations_general_username_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dropdown_option_padding"
                android:text="@string/settings_configurations_general_dashboard_sort_default"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/feature_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_container"
            android:layout_marginTop="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/feature_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_configurations_general_dashboard_feature_list_title"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/margin"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/feature_list_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#E0E0E0"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/feature_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/dashboard_sort_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feature_list_container"
            android:layout_marginTop="@dimen/margin">

            <TextView
                android:id="@+id/dashboard_sort_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/settings_configurations_general_dashboard_sort_title"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/dashboard_sort_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dropdown_option_padding"
                android:text="@string/settings_configurations_general_dashboard_sort_default"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
